Update Login, Fotgot Password, create test, view test, and device data simulation