@@ -1,25 +1,27 @@
 package com.mycompany.jpademo.backend.security.config;
 
-import com.mycompany.jpademo.backend.security.filter.BlockedIpFilter;
-import com.mycompany.jpademo.backend.security.filter.JwtAuthenticationFilter;
-import com.mycompany.jpademo.backend.security.filter.RateLimitingFilter;
-import com.mycompany.jpademo.backend.security.filter.RequestLoggingFilter;
+import com.mycompany.jpademo.backend.security.handler.LoginFailureHandler;
+import com.mycompany.jpademo.backend.security.handler.RoleBasedSuccessHandler;
+import com.mycompany.jpademo.backend.security.userdetails.CustomUserDetailsService;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -27,22 +29,19 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 @EnableMethodSecurity
 public class SecurityConfig {
 
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final BlockedIpFilter blockedIpFilter;
-    private final RateLimitingFilter rateLimitingFilterl;
-    private final RequestLoggingFilter requestLoggingFilter;
+    private final CustomUserDetailsService customUserDetailsService;
+    private final RoleBasedSuccessHandler roleBasedSuccessHandler;
+    private final LoginFailureHandler loginFailureHandler;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(java.util.Arrays.asList(
-                "http://localhost:3000",
-                "http://localhost:5173",
-                "http://127.0.0.1:3000",
-                "http://127.0.0.1:5173"
+        configuration.setAllowedOrigins(List.of(
+                "http://localhost:3000", "http://localhost:5173",
+                "http://127.0.0.1:3000", "http://127.0.0.1:5173"
         ));
-        configuration.setAllowedMethods(java.util.Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(java.util.Arrays.asList("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
@@ -52,57 +51,82 @@ public class SecurityConfig {
     }
 
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain webSecurityFilterChain(HttpSecurity http) throws Exception {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                .csrf(csrf -> csrf.disable())
+                // CSRF bật cho toàn bộ ứng dụng (đúng chuẩn session-based),
+                // NHƯNG bỏ qua cho các API JSON còn dùng (Register, ForgotPassword, LIS webhook)
+                // — các endpoint này gọi bằng fetch/axios, không có cơ chế gửi CSRF token
+                .csrf(csrf -> csrf
+                        .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
+                        .ignoringRequestMatchers("/api/**")
+                )
 
                 .exceptionHandling(exceptions -> exceptions
                         .authenticationEntryPoint((request, response, authException) -> {
-                            // Ép hệ thống trả về lỗi 401 thay vì 403
-                            response.setStatus(jakarta.servlet.http.HttpServletResponse.SC_UNAUTHORIZED);
-                            response.setContentType("application/json;charset=UTF-8");
-                            String jsonResponse = String.format(
-                                    "{\"success\": false, \"message\": \"%s\"}",
-                                    "Vui lòng đăng nhập để thực hiện chức năng này!"
-                            );
-                            response.getWriter().write(jsonResponse);
+                            // Nếu request KHÔNG phải trình duyệt (gọi /api/** không session) → trả JSON 401
+                            if (request.getRequestURI().startsWith("/api/")) {
+                                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                                response.setContentType("application/json;charset=UTF-8");
+                                response.getWriter().write(
+                                        "{\"success\": false, \"message\": \"Vui lòng đăng nhập để thực hiện chức năng này!\"}"
+                                );
+                            } else {
+                                response.sendRedirect("/login");
+                            }
                         })
                 )
 
-                .sessionManagement(session -> session.sessionCreationPolicy(org.springframework.security.config.http.SessionCreationPolicy.STATELESS))
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
 
                 .authorizeHttpRequests(auth -> auth
-
-                        .requestMatchers("/api/auth/login",
+                        .requestMatchers(
+                                "/login", "/register", "/forgot-password", "/google-complete",
+                                "/auth/google/**",
+                                "/css/**", "/js/**", "/images/**", "/webjars/**",
                                 "/api/auth/register",
                                 "/api/auth/register/verify-otp",
                                 "/api/auth/register/resend-otp",
-                                "/api/auth/forgot-password",
-                                "/api/auth/forgot-password/verify-otp",
-                                "/api/auth/forgot-password/reset-password",
-                                "/api/auth/google",
-                                "/api/auth/google/complete",
-                                "/api/integration/lis/results").permitAll()
+                                "/forgot-password/**",
+                                "/api/integration/lis/results"
+                        ).permitAll()
+
+                        .requestMatchers("/doctor/**").hasRole("DOCTOR")
+                        .requestMatchers("/patient/**").hasRole("PATIENT")
+                        .requestMatchers("/admin/**").hasRole("ADMIN")
 
                         .anyRequest().authenticated())
 
-                .addFilterBefore(requestLoggingFilter, UsernamePasswordAuthenticationFilter.class)
-                .addFilterAfter(blockedIpFilter, RequestLoggingFilter.class)
-                .addFilterAfter(rateLimitingFilterl, BlockedIpFilter.class)
-                .addFilterAfter(jwtAuthenticationFilter, RateLimitingFilter.class);
+                .formLogin(form -> form
+                        .loginPage("/login")
+                        .usernameParameter("login")
+                        .passwordParameter("password")
+                        .successHandler(roleBasedSuccessHandler)
+                        .failureHandler(loginFailureHandler)
+                        .permitAll())
+
+                .logout(logout -> logout
+                        .logoutUrl("/logout")
+                        .logoutSuccessUrl("/login?logout")
+                        .invalidateHttpSession(true)
+                        .deleteCookies("JSESSIONID")
+                        .permitAll());
 
         return http.build();
     }
 
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+    public DaoAuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+        provider.setUserDetailsService(customUserDetailsService);
+        provider.setPasswordEncoder(passwordEncoder());
+        return provider;
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
-        return configuration.getAuthenticationManager();
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
     }
 }
